# ctrlspeak

./: .cursorrules  .gitignore  .gitmodules  CLAUDE.md  MANIFEST.in  PLAN.md  README.md  TQDM_ISSUE_ANALYSIS.md  __init__.py  __main__.py  cli.py  ctrlspeak.py  ctrlspeak.rb  environment.py  hotkeys.py  live_transcribe.py  logging_config.py  model_loader.py  permissions.py  pyproject.toml  requirements-mlx.txt  requirements-nvidia.txt  requirements-whisper.txt  requirements.txt  state.py  streaming.py  test_ctrlspeak.py  test_fix.py  test_mlx_transcription.py  test_model_loading.py  test_parallel_models.py  test_permissions.py  test_tqdm_patch.py  test_transcribe_worker.py  test_transcription.py  transcription.py
homebrew/: README.md  ctrlspeak.rb
models/: __init__.py  base_model.py  canary.py  compatibility.py  factory.py  nemotron.py  parakeet.py  parakeet_mlx.py  whisper.py
tests/: test_history.py  test_rms_logging.py
ui/: __init__.py  app.py  state.py
ui/screens/: __init__.py  device_selection.py  help.py  history.py  log_viewer.py  model_loading.py  model_selection.py  recording.py  settings.py
ui/widgets/: __init__.py  accumulated_text.py  device_info.py  status_bar.py  waveform.py
utils/: __init__.py  audio.py  clipboard.py  config.py  history.py  keyboard_shortcuts.py  permission_manager.py  player.py  tqdm_lock.py
