[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctrlspeak"
version = "1.4.0"
description = "Minimal speech-to-text utility for macOS"
readme = "README.md"
authors = [
    {name = "Nav Patel", email = "nav@abhi.in"},
]
license = {text = "MIT"}
requires-python = "~=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]
keywords = ["speech-to-text", "voice-recognition", "macos", "accessibility"]

dependencies = [
    "torch>=2.0.0",
    "torchaudio",
    "numpy<2.0.0",

    "sounddevice",
    "soundfile",
    "pynput",
    "pyperclip",
    "rich>=13.6.0",
    "textual>=0.41.0",
    "mlx",
    "parakeet-mlx",
]



[project.urls]
Homepage = "https://github.com/patelnav/ctrlspeak"
Repository = "https://github.com/patelnav/ctrlspeak.git"
"Bug Tracker" = "https://github.com/patelnav/ctrlspeak/issues"

[project.scripts]
ctrlspeak = "ctrlspeak:main"

[tool.setuptools]
packages = ["models", "utils", "ui", "ui.screens", "ui.widgets"]

[tool.setuptools.package-data]
"" = ["on.wav", "off.wav"] 